<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/searchFoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="0dp"
        android:text="Search FooDs!"
        android:textColor="@color/black"
        android:background="@drawable/gradient"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/searchArea"
        android:layout_width="wrap_content"
        android:layout_height="460dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchFoodTitle"
            android:text="@string/search_battle_label" />

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/searchButton"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchText"
            android:layout_centerHorizontal="true"
            android:text="@string/search" />


        <ListView
            android:id="@+id/searched_item_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchArea"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="27dp"
            android:visibility="invisible"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="FooDStadium ©" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="18dp"
        android:text="@string/contact_us" />
</RelativeLayout>